--- a/index.html
+++ b/index.html
@@ -16,6 +16,20 @@
       content="大学生,プログラミング,IT,機械学習,Python,学習リソース,オンライン講座,参考書"
     />
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-6G0T3XYKWC"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-6G0T3XYKWC");
+  </script>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
