--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <link rel="icon" type="image/svg+xml" href="/src/images/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      大学生向けプログラミング・IT・機械学習リソース | UniStudyGuide!
+      大学生向けプログラミング・IT・機械学習 学びのカタログ | UniStudyGuide!
     </title>
     <meta
       name="description"
-      content="大学生がプログラミング、IT、機械学習、Pythonを学ぶための厳選リソースを紹介。初心者向け入門書から、実践的なオンライン講座まで、あなたの学習を力強くサポートします。"
+      content="大学生がプログラミング、IT、機械学習、Pythonを学ぶための厳選教材を紹介。初心者向け入門書から、実践的なオンライン講座まで、あなたの学習を力強くサポートします。"
     />
     <meta
       name="keywords"
-      content="大学生,プログラミング,IT,機械学習,Python,学習リソース,オンライン講座,参考書"
+      content="大学生,プログラミング,IT,機械学習,Python,学習教材,オンライン講座,参考書"
     />
   </head>
   <!-- Google tag (gtag.js) -->
